Fixed issue with header image when viewed on safari

--- a/Website/css/global.css
+++ b/Website/css/global.css
@@ -88,6 +88,7 @@ h1 {
 
 .headerLogoImage {
   width: 100%;
+  height:100%
 }
 
 .flexContainer {
@@ -247,7 +248,6 @@ h1 {
   position: absolute;
   top:50%;
   font-size: 36px;
-  padding-bottom: 6px;
   transform: translate(0,-50%);
   cursor: pointer;
   user-select: none;
